# number_writer_service

./: Cargo.toml  ReadMe.txt  Rocket.toml
src/: main.rs
src/controller/: main_controller.rs  mod.rs  number_transform_controller.rs
src/helper/: mod.rs  number_parts_catalog.rs  string_modifications.rs
src/model/: mod.rs  phonetic_number.rs
src/test/: mod.rs
src/test/helper/: mod.rs
src/test/helper/number_translator/: mod.rs
src/test/model/: mod.rs  phonetic_number.rs
