[package]
name = "number_writer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
dotenv = "0.9.0"
rocket_codegen = "0.5.0-rc.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
r2d2 = "0.8"
nom = "*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]